 * Moved BuildDistribution from FunctionalChaosAlgorithm to MetaModelAlgorithm

=== Documentation ===
==== API documentation ====
 * Clarified SobolIndicesExperiment page, notations now consistent with SobolIndicesAlgorithm page
 * Clarified SobolIndicesAlgorithm and (Saltellli|Martinez|MauntzKucherenko|Jansen)SensitivityAlgorithm pages, corrected formulas

=== Python module ===
 * Renamed Viewer *_kwargs arguments to *_kw (matplotlib convention)
 * Add ProcessSample Field accessors

=== Miscellaneous ===
 * Require C99/C++11 support
 * Do not compute Lagrange multipliers by default during an optimization
 * Add ResourceMap::FindKeys

=== Bug fixes ===
 * #1001 (Add method SobolSimulationResult::draw)
 * #1259 (The diagonal of a scatter plot matrix should have the histograms)
 * #1267 (Some CSV files cannot be imported)
 * #1377 (The `setKnownParameter` method is not compatible with `buildEstimator`)
 * #1407 (GeneralLinearModelAlgorithm mishandles user-specified scale parameter when normalize is True)
 * #1415 (The BuildDistribution static method should not use the KS-test)
 * #1421 (UserDefinedStationaryCovarianceModel doc suggests input dimension can be >1)
 * #1447 (Highly inaccurate result in reliability model when using subset of RandomVector)
 * #1465 (The Sample constructor based on a list and an integer should not exist)
 * #1470 (setNbModes is sometimes ignored)
 * #1474 (optimization defaults)
 * #1507 (Leak in Collection typemaps)
 * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 * #1515 (KernelSmoothing build failure)
 * #1520 (The NLopt test is dubious)
 * #1521 (Basis of MonomialFunction)
 * #1529 (The error of the NonLinearLeastSquaresCalibration and GaussianNonLinearCalibration are different)
 * #1540 (SubsetSampling: incorrect event sample)
 * #1549 (Doc of evaluation operator of KrigingResult)
 * #1553 (Optimization algorithms ignore MaxEvaluationNumber parameter in SORM)