@@ -37,6 +37,7 @@
 ==== API documentation ====
  * Clarified SobolIndicesExperiment page, notations now consistent with SobolIndicesAlgorithm page
  * Clarified SobolIndicesAlgorithm and (Saltellli|Martinez|MauntzKucherenko|Jansen)SensitivityAlgorithm pages, corrected formulas
+ * Documented how to turn warnings off or write them on a file
 
 === Python module ===
  * Renamed Viewer *_kwargs arguments to *_kw (matplotlib convention)
